--- a/alurabooks-aula03/index.html
+++ b/alurabooks-aula03/index.html
@@ -49,7 +49,7 @@
     <section class="banner">
         <h2 class="banner__titulo">Já sabe qual modelo escolher?</h2>
         <p class="banner__texto">Aqui temos opções para seu gosto!</p>
-        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+        <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima compra?">
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">Modelos</h2>
